--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <link rel="stylesheet" href="stylesheet.css">
-      <title>Document</title>
+      <title>Amazon Clone</title>
 </head>
-<body>
-      
-</body>
+<header>
+      <div class="header">
+            <div class="logo"></div>
+
+            <div class="loc">
+                  <div class="loc1">
+                        <p>Deliver to</p>
+                  </div>
+                  <div class="loc2">
+                        <i id="loc" class="fa-solid fa-location-dot"></i>
+                        <p><b>India</b></p>
+                  </div>
+            </div>
+           <!-- <div class="search">
+                        <select name="select" id="select">
+                              <option value="all">All</option>
+                        </select>
+                        <input class="search-box" type="text" name="q" placeholder="Search Amazon" aria-label="Search" />
+                        <button type="submit" class="search-icon">
+                              <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
+            </div>
+      -->
+            <div class="nav-search">
+
+                  <select name="select" id="select">
+                      <option value="all">All</option>
+                  </select>
+                  <input type="text" name="Search" id="search" placeholder="Search Amazon">
+                  <button type="button" id="search-btn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                  </button>
+              </div>
+            <div class="lang">
+                  <p><b>EN</b></p>
+                  <i class="fa-solid fa-caret-down" id="lang1"></i>
+            </div>
+            
+      </div>
+</header>
 </html>
