--- a/index.html
+++ b/index.html
@@ -44,7 +44,27 @@
                   <p><b>EN</b></p>
                   <i class="fa-solid fa-caret-down" id="lang1"></i>
             </div>
-            
+            <div class="sign-in">
+                  <div class="sign-in-line1">
+                        <p>Hello, sign in</p>
+                  </div>
+                  <div class="sign-in-line2">
+                        <p><b>Account & Lists</b></p>
+                        <i class="fa-solid fa-caret-down" id="lang1"></i>
+                  </div>
+            </div>
+            <div id="return">
+                  <div id="return-line1">
+                        <p>Returns</p>
+                  </div>
+                  <div id="return-line2">
+                        <p><b>& Orders</b></p>
+                  </div>
+            </div>
+            <div id="cart">
+                  <i class="fa-solid fa-cart-shopping" id="cart-logo"></i>
+                  <p><b>Cart</b></p>
+            </div>
       </div>
 </header>
 </html>
