Tried fixing the grid

--- a/index.html
+++ b/index.html
@@ -80,5 +80,26 @@
                   </div>
             </nav>
       </header>
+      <main class="main">
+            <div class="main-image"></div>
+            <div class="content">
+                  <div class="content-warning">
+                        <p id="warning-message">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.</p>
+                        <a href="#" id="warning-link">Click here to go to amazon.in</a>
+                  </div>
+                  <div class="content-items">
+                        <div id="content-item1" class="content-items-box">
+                              <p id="content-items-title"><b>Gaming accessories</b></p>
+                              <div id="content-items-images">
+                                    <img src="/images/item1.jpg" alt="Gaming accessories" class="content-items-image">
+                                    <img src="/images/item1.jpg" alt="Gaming accessories" class="content-items-image">
+                                    <img src="/images/item1.jpg" alt="Gaming accessories" class="content-items-image">
+                                    <img src="/images/item1.jpg" alt="Gaming accessories" class="content-items-image">
+                              </div>
+                              </div>
+                        </div>
+                  </div>
+            </div>
+      </main>
 </body>
 </html>
