--- a/index.html
+++ b/index.html
@@ -88,14 +88,11 @@
                         <a href="#" id="warning-link">Click here to go to amazon.in</a>
                   </div>
                   <div class="content-items">
-                        <div id="content-item1" class="content-items-box">
-                              <p id="content-items-title"><b>Gaming accessories</b></p>
-                              <div id="content-items-images">
-                                    <img src="/images/item1.jpg" alt="Gaming accessories" class="content-items-image">
-                                    <img src="/images/item1.jpg" alt="Gaming accessories" class="content-items-image">
-                                    <img src="/images/item1.jpg" alt="Gaming accessories" class="content-items-image">
-                                    <img src="/images/item1.jpg" alt="Gaming accessories" class="content-items-image">
-                              </div>
+                        <div class="items-box">
+                              <p id="content-items-title">Gaming accessories</p>
+                              <div id="content-item1-line1">
+                                    <img src="/images/item1.jpg" alt="Headphones" id="items-image">
+                                    <img src="/images/item1.jpg" alt="Headphones" id="items-image">
                               </div>
                         </div>
                   </div>
