Main section complete

--- a/index.html
+++ b/index.html
@@ -87,16 +87,75 @@
                         <p id="warning-message">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.</p>
                         <a href="#" id="warning-link">Click here to go to amazon.in</a>
                   </div>
-                  <div class="content-items">
+            </div>
+            <div class="content-1">
+                  <div class="content-items1">
                         <div class="items-box">
-                              <p id="content-items-title">Gaming accessories</p>
-                              <div id="content-item1-line1">
-                                    <img src="/images/item1.jpg" alt="Headphones" id="items-image">
-                                    <img src="/images/item1.jpg" alt="Headphones" id="items-image">
+                              <div class="box-content">
+                                    <h2>Clothes</h2>
+                                    <div class="box-image" style="background-image: url('/images/box1_image.jpg');"></div>
+                                    <a href="#">See more</a>
+                              </div>
+                        </div>
+                        <div class="items-box">
+                              <div class="box-content">
+                                    <h2>Healthcare</h2>
+                                    <div class="box-image" style="background-image: url('/images/box2_image.jpg');"></div>
+                                    <a href="#">See more</a>
+                              </div>
+                        </div>
+                        <div class="items-box">
+                              <div class="box-content">
+                                    <h2>Furniture</h2>
+                                    <div class="box-image" style="background-image: url('/images/box3_image.jpg');"></div>
+                                    <a href="#">See more</a>
+                              </div>
+                        </div>
+                        <div class="items-box">
+                              <div class="box-content">
+                                    <h2>Electronics</h2>
+                                    <div class="box-image" style="background-image: url('/images/box4_image.jpg');"></div>
+                                    <a href="#">See more</a>
+                              </div>
+                        </div>
+                  </div>
+                  <div class="content-items2">
+                        <div class="items-box">
+                              <div class="box-content">
+                                    <h2>Makeup</h2>
+                                    <div class="box-image" style="background-image: url('/images/box5_image.jpg');"></div>
+                                    <a href="#">See more</a>
+                              </div>
+                        </div>
+                        <div class="items-box">
+                              <div class="box-content">
+                                    <h2>Pet Care</h2>
+                                    <div class="box-image" style="background-image: url('/images/box6_image.jpg');"></div>
+                                    <a href="#">See more</a>
+                              </div>
+                        </div>
+                        <div class="items-box">
+                              <div class="box-content">
+                                    <h2>New Toys</h2>
+                                    <div class="box-image" style="background-image: url('/images/box7_image.jpg');"></div>
+                                    <a href="#">See more</a>
+                              </div>
+                        </div>
+                        <div class="items-box">
+                              <div class="box-content">
+                                    <h2>New Fashion</h2>
+                                    <div class="box-image" style="background-image: url('/images/box8_image.jpg');"></div>
+                                    <a href="#">See more</a>
                               </div>
                         </div>
                   </div>
             </div>
+            
+            <footer>
+                  <div class="back-to-top">
+                        Back to top
+                  </div>
+            </footer>
       </main>
 </body>
 </html>
