--- a/index.html
+++ b/index.html
@@ -81,14 +81,12 @@
             </nav>
       </header>
       <main class="main">
-            <div class="main-image"></div>
-            <div class="content">
+            <div class="main-image">
                   <div class="content-warning">
-                        <p id="warning-message">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.</p>
-                        <a href="#" id="warning-link">Click here to go to amazon.in</a>
+                        <p id="warning-message">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="#">Click here to go to amazon.in</a></p>
                   </div>
             </div>
-            <div class="content-1">
+            <div class="content">
                   <div class="content-items1">
                         <div class="items-box">
                               <div class="box-content">
@@ -149,8 +147,63 @@
                               </div>
                         </div>
                   </div>
-            </div>
-            
+            </div> 
       </main>
+      <footer>
+            <div class="back-to-top">
+                  Back to top
+            </div>
+            <div class="footer">
+                  <div class="footer-content">
+                        <ul>
+                              <p>Get to Know Us</p>
+                              <a>Careers</a>
+                              <a>Blog</a>
+                              <a>About Amazon</a>
+                              <a>Investor Relations</a>
+                              <a>Amazon Devices</a>
+                        </ul>
+                        <ul>
+                              <p>Make Money with Us</p>
+                              <a>Sell products on Amazon</a>
+                              <a>Sell on Amazon Business</a>
+                              <a>Sell apps on Amazon</a>
+                              <a>Become an Affiliate</a>
+                              <a>Advertise Your Products</a>
+                              <a>Self-Publish with Us</a>
+                              <a>Host an Amazon Hub</a>
+                        </ul>
+                        <ul>
+                              <p>Amazon Payment Products</p>
+                              <a>Amazon Business Card</a>
+                              <a>Shop with Points</a>
+                              <a>Reload Your Balance</a>
+                              <a>Amazon Currency Converter</a>
+                        </ul>
+                        <ul>
+                              <p>Let Us Help You</p>
+                              <a>Amazon and COVID-19</a>
+                              <a>Your Account</a>
+                              <a>Your Orders</a>
+                              <a>Shipping Rates & Policies</a>
+                              <a>Returns & Replacements</a>
+                              <a>Manage Your Content and Devices</a>
+                  </div>
+            </div>
+            <div class="footer2">
+                  <div class="footer-logo"></div>
+            </div>
+            <div class="footer3">
+                  <div class="footer3-line1">
+                        <p>Conditions of Use</p>
+                        <p>Privacy Notice</p>
+                        <p>Consumer Health Data Privacy Disclosure</p>
+                        <p>Your Ads Privacy Choices</p>
+                  </div>
+                  <div class="footer3-line2">
+                        <p>© 1996-2025, Amazon.com, Inc. or its affiliates</p>
+                  </div>
+            </div>
+      </footer>
 </body>
 </html>
